tests/fixtures/invalid/divmod_bytes_str.py
# Cannot call divmod() with Bytes, Str
x = divmod(b"hello", "hello")
